static/css/style.css
/* ----------- general classes ----------- */
/* adds texture image to all page through body tag */
.backgroundTextureBody {
    background-image: url("../images/generalbackgroundtexture.jpg");
    background-repeat: repeat-y;
    background-size: cover;
}

/* resizes the materialize button because it was to big, espcially for phones */
.btn_small {
    height: 20px;
    width: 50px;
    line-height: 20px;
    margin: 5px 5px;
    padding: 0 0.5em;
}

/* Used to reduce with of forms and lists on wide viewscreens, see media query section */
.variableFormContainer {
    width: 100%;
    margin: auto;
}

/* reduces the materialize margins on various input fields */
.input-field {
    margin-top: 5px;
    margin-bottom: 5px;
}

.headerNPCOverview {
    font-size: 1.7rem;
    background-color: rgba(255,255,255,0.2);
}


/* ----------- welcome/landing page classes ----------- */
/* positions and aligns hero image */
.heroImage {
	background-image: url("../images/background.jpg");
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 300px;
	padding-bottom: 10px;
}

.navWrapperNPCOverview {
    background-color: black;
}


/* ----------- Media queries ----------- */
/* mediaqueries necessary to prevent hero image from filing the whole viewport (vertically), the content underneath should
 be partly visible so the user is aware of it. On the other hand on very wide viewports the hero image should have a bit more height */
@media screen and (orientation: landscape) and (max-width: 768px) {
  .heroImage {
      min-height: 150px;
  }
}

@media screen and (min-width: 1024px) {
  .heroImage {
      min-height: 450px;
  }
}

/* used to reduce the width of forms and lists on wide viewports */
@media screen and (min-width: 992px) {
    .variableFormContainer {
        width: 60%;
    }
}

